Contrast Issue

--- a/techdegree/proj8/css/styles.css
+++ b/techdegree/proj8/css/styles.css
@@ -10,11 +10,15 @@ body {
 	padding: 0;
 	text-align: center;
 	font-family: 'Lato', sans-serif;
-	color: #f2f2f2;
+	color: #02eabb;
 	background: #2d2b30;
 }
 fieldset {
 	border: none;
+}
+label,
+legend {
+	color: #02eabb;
 }
 /*******************
  Link Styles
