--- a/techdegree/proj8/css/survey.css
+++ b/techdegree/proj8/css/survey.css
@@ -6,10 +6,6 @@
 	width: 60%;
 	padding: 10px;
 }
-label,
-legend {
-	color: #f2f2f2;
-}
 .container {
 	text-align: center;
 }
